<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:animateLayoutChanges="true">

    <FrameLayout
        android:id="@+id/main_frame"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/sudoku_background"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:id="@+id/play_layout_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:visibility="invisible">

            <Button
                android:id="@+id/solve_button_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/light_button"
                android:text="Solve"/>

            <Button
                android:id="@+id/check_cells_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin_half"
                android:layout_toLeftOf="@id/solve_button_play"
                android:background="@drawable/light_button"
                android:text="@string/check_button"/>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/benchmark_layout_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top">

            <Button
                android:id="@+id/solve_button_bench"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/light_button"
                android:text="@string/solve_button"/>

            <Spinner
                android:id="@+id/strategy_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_horizontal_margin_half"
                android:layout_toLeftOf="@id/solve_button_bench"/>

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/gameBoardLayout_frame"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <me.jbuckley.mysudokusolver.SudokuBoardView
                android:id="@+id/gameBoardLayout"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:background="@drawable/game_board_border"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="gone"/>

        </FrameLayout>

        <RelativeLayout
            android:id="@+id/play_layout_bottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:visibility="invisible">

            <me.jbuckley.mysudokusolver.DigitsLayout
                android:id="@+id/digits"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:columnCount="5"
                android:rowCount="2"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/benchmark_layout_bottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom">

            <Button
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/light_button"
                android:text="@string/reset_button"/>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/reset_button">

                <TextView
                    android:id="@+id/ass_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="0dp"
                    android:text="@string/ass_text"
                    android:textSize="@dimen/benchmark_text"/>

                <TextView
                    android:id="@+id/ass_value_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/ass_text"
                    android:layout_toRightOf="@id/ass_text"
                    android:paddingTop="0dp"
                    android:textSize="@dimen/benchmark_text"/>

                <TextView
                    android:id="@+id/time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ass_text"
                    android:text="@string/time_text"
                    android:textSize="@dimen/benchmark_text"/>

                <TextView
                    android:id="@+id/time_value_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/time_text"
                    android:layout_toRightOf="@id/time_text"
                    android:textSize="@dimen/benchmark_text"/>

            </RelativeLayout>

        </RelativeLayout>

    </FrameLayout>

</RelativeLayout>